docs-archive/apache-airflow-providers-google/8.7.0/_sources/_api/airflow/providers/google/cloud/transfers/trino_to_gcs/index.rst.txt
:py:mod:`airflow.providers.google.cloud.transfers.trino_to_gcs`
===============================================================

.. py:module:: airflow.providers.google.cloud.transfers.trino_to_gcs


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.transfers.trino_to_gcs.TrinoToGCSOperator




.. py:class:: TrinoToGCSOperator(*, trino_conn_id = 'trino_default', **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.transfers.sql_to_gcs.BaseSQLToGCSOperator`

   Copy data from TrinoDB to Google Cloud Storage in JSON, CSV or Parquet format.

   :param trino_conn_id: Reference to a specific Trino hook.

   .. py:attribute:: ui_color
      :annotation: = #a0e08c

      

   .. py:attribute:: type_map
      

      

   .. py:method:: query()

      Queries trino and returns a cursor to the results.


   .. py:method:: field_to_bigquery(field)

      Convert trino field type to BigQuery field type.


   .. py:method:: convert_type(value, schema_type, **kwargs)

      Do nothing. Trino uses JSON on the transport layer, so types are simple.

      :param value: Trino column value
      :param schema_type: BigQuery data type



