docs-archive/apache-airflow-providers-google/15.0.1/_sources/_api/airflow/providers/google/cloud/transfers/trino_to_gcs/index.rst.txt
airflow.providers.google.cloud.transfers.trino_to_gcs
=====================================================

.. py:module:: airflow.providers.google.cloud.transfers.trino_to_gcs


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.transfers.trino_to_gcs.TrinoToGCSOperator


Module Contents
---------------

.. py:class:: TrinoToGCSOperator(*, trino_conn_id = 'trino_default', **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.transfers.sql_to_gcs.BaseSQLToGCSOperator`


   Copy data from TrinoDB to Google Cloud Storage in JSON, CSV or Parquet format.

   :param trino_conn_id: Reference to a specific Trino hook.


   .. py:attribute:: ui_color
      :value: '#a0e08c'



   .. py:attribute:: type_map


   .. py:attribute:: trino_conn_id
      :value: 'trino_default'



   .. py:property:: db_hook
      :type: airflow.providers.trino.hooks.trino.TrinoHook



   .. py:method:: query()

      Query trino and returns a cursor to the results.



   .. py:method:: field_to_bigquery(field)

      Convert trino field type to BigQuery field type.



   .. py:method:: convert_type(value, schema_type, **kwargs)

      Do nothing. Trino uses JSON on the transport layer, so types are simple.

      :param value: Trino column value
      :param schema_type: BigQuery data type



   .. py:method:: get_openlineage_facets_on_start()


